# autolabel3d

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml
configs/data/: dashcam.yaml  nuscenes.yaml
configs/detector/: grounding_dino.yaml
configs/lifter/: boxer.yaml  depth_anything.yaml
configs/segmentor/: sam2.yaml
scripts/: benchmark_onnx.py  demo.py
src/autolabel3d/: __init__.py  cli.py  factory.py  pipeline.py
src/autolabel3d/data/: base.py  dashcam_loader.py  nuscenes_loader.py  schemas.py
src/autolabel3d/detection/: base.py  grounding_dino.py
src/autolabel3d/evaluation/: iou.py  kitti_format.py  metrics.py
src/autolabel3d/lifting/: base.py  boxer.py  depth_anything.py
src/autolabel3d/optimization/: export.py  onnx_runtime.py
src/autolabel3d/segmentation/: base.py  sam2.py
src/autolabel3d/utils/: calibration.py  device.py  geometry.py  logging.py
src/autolabel3d/visualization/: bev.py  comparison.py  overlay.py
tests/: conftest.py  test_data.py  test_detection.py  test_evaluation.py  test_lifting.py  test_optimization.py  test_pipeline.py  test_schemas.py  test_segmentation.py
