[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autolabel3d"
version = "0.1.0"
description = "Scalable auto-labeling pipeline for autonomous vehicle perception using Grounded-SAM 2 and monocular depth estimation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kushal Dabbe", email = "kushaldabbe752@gmail.com"},
]
keywords = ["autonomous-vehicles", "auto-labeling", "sam2", "grounding-dino", "3d-detection", "monocular-depth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
nuscenes = [
    "nuscenes-devkit>=1.1.11",
    "pyquaternion>=0.9.9",
]
onnx = [
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "onnxscript>=0.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
all = [
    "autolabel3d[nuscenes,onnx,dev]",
]

[project.scripts]
autolabel3d = "autolabel3d.cli:main"

[project.urls]
Homepage = "https://github.com/kushaldabbe/autolabel3d"
Repository = "https://github.com/kushaldabbe/autolabel3d"
Issues = "https://github.com/kushaldabbe/autolabel3d/issues"

# --- Tool Configuration ---

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "N803",   # allow uppercase args (K for intrinsic matrix is standard in CV)
    "N806",   # allow uppercase vars (T, K, R are standard in robotics/vision)
    "RUF002", # allow Unicode math symbols in docstrings
    "E741",   # allow ambiguous var names (l for length is standard in 3D geometry)
]

[tool.ruff.lint.isort]
known-first-party = ["autolabel3d"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "integration: marks integration tests requiring model weights",
]
